Bug 40234 - Weborder - scroll bar is not fully visible for product modifiers

--- a/skins/weborder/css/modifiers.css
+++ b/skins/weborder/css/modifiers.css
@@ -67,7 +67,7 @@
     width: 330px;
     float: left;
     word-break: break-all;
-    margin: 0 150px 15px 0;
+    margin: 0 25px 15px 0;
     cursor: pointer;
     min-height: 30px;
 }
@@ -144,9 +144,6 @@ html:not(.ua-webkit) .modifiers_table .modifier span.title {
 
 .modifiers_table .modifier_class_list {
     margin-top: 5px;
-}
-#modifiers_popup .modifiers_table_scroll {
-    margin-right: -150px;
 }
 
 .modifiers_table .special_button {
@@ -272,13 +269,9 @@ span.tooltip:before {
     }
 }
 @media only screen and (min-width: 949px) {
-    #modifiers_popup .modifiers_table_scroll {
-        margin-right: -28px;
-    }
     .modifiers_table .modifier {
         width: 310px;
         min-height: 45px;
-        margin-right: 25px;
         margin-bottom: 5px;
     }
     .modifiers_table .modifier label {
@@ -292,12 +285,8 @@ span.tooltip:before {
     }
 }
 @media only screen and (min-width: 1440px) {
-    #modifiers_popup .modifiers_table_scroll {
-        margin-right: -90px;
-    }
     .modifiers_table .modifier {
         width: 320px;
-        margin-right: 90px;
     }
     .modifiers_table .modifier label {
         width: 195px;
